traefik/4-simple-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefic-ingress
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /app1
            pathType: Prefix
            backend:
              service:
                name: simple-app1-cluster-ip
                port:
                  number: 80
          - path: /app2
            pathType: Prefix
            backend:
              service:
                name: simple-app2-cluster-ip
                port:
                  number: 80
